--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -837,15 +837,67 @@ span.online::before {
 
 
 /* TEXT AND HEADINGS*/
-.text-faded, .forum-stats ul li, .thread-list .thread .created_at, 
-.post-content blockquote.big .author span.time, 
-.post-content blockquote.small .author .time, 
-.post-content blockquote.simple .author, 
-.activity-list .activity .activity-header .title span, 
+.text-faded, .forum-stats ul li, .thread-list .thread .created_at,
+.post-content blockquote.big .author span.time,
+.post-content blockquote.small .author .time,
+.post-content blockquote.simple .author,
+.activity-list .activity .activity-header .title span,
 .activity-list .activity .thread-details, span.offline {
   color: rgba(84, 84, 84, 0.7);
 }
 
+h1 {
+  font-size: 32px;
+}
+
+@media (min-width: 240px) and (max-width: 720px) {
+  h1 {
+    font-size: 24px;
+  }
+}
+
+h2 {
+  font-size: 28px;
+}
+
+@media (min-width: 240px) and (max-width: 720px) {
+  h2 {
+    font-size: 20px;
+  }
+}
+
+.text-lead, .forum-list .forum-listing .threads-count .count,
+.profile-card .stats span, .modal-container .modal .modal-header .title {
+  font-size: 26px;
+  line-height: 1.5;
+  font-weight: 300;
+}
+
+@media (min-width: 240px) and (max-width: 720px) {
+  .text-lead, .forum-list .forum-listing .threads-count .count,
+  .profile-card .stats span, .modal-container .modal .modal-header .title {
+      font-size: 22px;
+  }
+}
+
+.text, p, .text-xsmall, .thread-list .thread .created_at, .pagination,
+.post-content blockquote.small .author .time,
+.post-content blockquote.simple .author .time,
+.activity-list .activity .thread-details, span.offline, span.online,
+.btn-xsmall, .btn-brown, ul.breadcrumbs li:not(:last-of-type)::after,
+.text-small, .forum-list .forum-listing .forum-details ul.subforums,
+.post-content blockquote.big .author,
+.post-content blockquote.small .author a,
+.post-content blockquote.simple .author,
+.activity-list .activity .activity-header .title span, .btn-small,
+ul.breadcrumbs li, .text-large, .list-title, .forum-stats ul li,
+.profile-card .user-website, .activity-list .activity .activity-header .title,
+.btn-large, .text-xlarge, .btn-xlarge, .btn, .btn-blue, .btn-blue-outlined,
+.btn-brown-outlined, .btn-green, .btn-green-outlined, .btn-red,
+.btn-red-outlined, .btn-ghost {
+  font-size: 16px;
+  line-height: 1.5;
+}
 
 /* NAVBAR */
 .navbar {
